--- a/public_html/TODO
+++ b/public_html/TODO
@@ -3,4 +3,4 @@ AKTUALNY HAMBURGER JEST ZBUGOWANY TAK BARDZO ŻE NAPRAWA I SZUKANIE BŁEDÓW JES
 --------------------------
 Naprawienie CSS jeżeli chodzi o dolne menu zarządzające planszą.
 --------------------------
-Dodać zapis oraz odczyt plików zapisanych przez PHP na serwerze
+Dodać zapis oraz odczyt plików zapisanych przez PHP na serwerze.
