--- a/public_html/TODO
+++ b/public_html/TODO
@@ -4,3 +4,7 @@ AKTUALNY HAMBURGER JEST ZBUGOWANY TAK BARDZO ŻE NAPRAWA I SZUKANIE BŁEDÓW JES
 Naprawienie CSS jeżeli chodzi o dolne menu zarządzające planszą.
 --------------------------
 Dodać zapis oraz odczyt plików zapisanych przez PHP na serwerze.
+
+
+JS: https://pastebin.com/CvJx8hSn
+PHP: https://pastebin.com/hBUkfVBu
